# Aetheris

./: .gitignore  AGENTS.md  Cargo.toml  FINAL_ARCHITECTURAL_PLAN.md  ISSUE_IPA_PLONK_INTEGRATION.md  LICENSE  PLAN_FIX_EXTENDED_DOMAIN.md  README.md  backend_test.py  blockers_and_gaps.md  check_addr.py  diagnosis.md  formal_verification.md  genesis.json  gossip_aggregation_protocol.md  implementation_roadmap.md  ledger_outputs.json  mainnet_execution_plan.md  math_spec.md  production_gap_analysis.md  progress.md  protocol_design_ruling.md  whitepaper.md
Aetheris.App/: Aetheris.App.csproj  App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
Aetheris.App/Core/: AetherisBackend.cs
Aetheris.CLI/: Aetheris.CLI.csproj  Program.cs
Aetheris.CLI/Core/: AetherisBackend.cs
aetheris-core/: Cargo.toml
aetheris-core/src/: lib.rs
aetheris-crypto/: Cargo.toml
aetheris-crypto/src/: classgroup.rs  lib.rs  trace.rs  vdf.rs
aetheris-ffi/: Cargo.toml
aetheris-ffi/examples/: test_backend.rs
aetheris-ffi/src/: lib.rs  lib.rs.bak  lib_new.rs
aetheris-node/: Cargo.toml
aetheris-node/src/: consensus.rs  lib.rs  main.rs  mixnet.rs  p2p.rs  state.rs  validation.rs
aetheris-node/tests/: adversarial_sim.rs
aetheris-recursive/: B-2_plan.md  B-3_plan.md  Cargo.toml  phase_1_13_plan.md  phase_1_14_plan.md
aetheris-recursive/docs/: in_circuit_ipa_verifier.md
aetheris-recursive/examples/: debug_mul.rs
aetheris-recursive/src/: accumulator.rs  block_aggregator.rs  circuit_accumulate.rs  diagnostics.rs  grain.rs  ipa_transcript.rs  lib.rs  non_native_fp.rs  non_native_fq.rs  pallas_accumulate.rs  pallas_ecc.rs  pallas_ipa.rs  poseidon_transcript.rs  proof_import.rs  prove_recursive.rs  recursive_proof.rs  transcript_blake2b.rs  transcript_blake2b_circuit.rs  transcript_blake2b_compression.rs  transcript_bytes.rs  transcript_words.rs  vesta_accumulate.rs  vesta_ecc.rs  vesta_fq.rs  vesta_ipa.rs  vesta_range.rs  vesta_transcript.rs
aetheris-recursive/tests/: compat_test.rs
aetheris-wallet/: Cargo.toml
aetheris-wallet/src/: lib.rs  main.rs
aetheris-zkp/: Cargo.toml  REVIEW_FINDINGS.md
aetheris-zkp/src/: combined_circuit.rs  diagnostics.rs  halo2_bn254.rs  halo2_pasta.rs  lib.rs  membership_circuit.rs  merkle_tree.rs  poseidon_fq.rs  poseidon_fq_chip.rs  trait_.rs
aetheris-zkp/src/ipa/: commitment.rs  mod.rs  prover.rs  strategy.rs  verifier.rs
docs/: FINAL_ARCHITECTURAL_PLAN.md  IPA_PLONK_AGENT_DEBUG_GUIDE.md  ISSUE_IPA_PLONK_INTEGRATION.md  WHITEPAPER_CONFORMANCE_AUDIT.md  contract_design.md  implementation_roadmap.md  mainnet_execution_plan.md  math_spec.md  progress.md  protocol_design_ruling.md  whitepaper.md
docs/protocol_closure/: README.md  checks.md  dependency_vendoring.md  issues.md  progress.md  protocol_closure_plan.md  recursive_aggregation_modes.md
formal_proof/: .Aetheris_Consensus.aux  .Aetheris_Core.aux  .Aetheris_Integrity.aux  .Aetheris_Privacy.aux  .Aetheris_Recursive_Aggregation.aux  .Aetheris_State.aux  .Aetheris_Tree.aux  .Aetheris_VDF.aux  .Aetheris_ZK_Circuit.aux  Aetheris_Consensus.glob  Aetheris_Consensus.v  Aetheris_Consensus.vo  Aetheris_Core.glob  Aetheris_Core.v  Aetheris_Core.vo  Aetheris_Integrity.glob  Aetheris_Integrity.v  Aetheris_Integrity.vo  Aetheris_Privacy.glob  Aetheris_Privacy.v  Aetheris_Privacy.vo  Aetheris_Recursive_Aggregation.glob  Aetheris_Recursive_Aggregation.v  Aetheris_Recursive_Aggregation.vo  Aetheris_State.glob  Aetheris_State.v  Aetheris_State.vo  Aetheris_Tree.glob  Aetheris_Tree.v  Aetheris_Tree.vo  Aetheris_VDF.glob  Aetheris_VDF.v  Aetheris_VDF.vo  Aetheris_ZK_Circuit.glob  Aetheris_ZK_Circuit.v  Aetheris_ZK_Circuit.vo  proof_plan.md
prototype/: classgroup_proto.py  core.py  crypto.py  main.py  non_native_fq_proto.py  vdf.py
scripts/: gen_crs.ps1  vendor_pse_deps.ps1
