[package]
name = "aetheris-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aetheris-core = { path = "../aetheris-core" }
aetheris-node = { path = "../aetheris-node" }
aetheris-zkp = { path = "../aetheris-zkp" }
aetheris-crypto = { path = "../aetheris-crypto" }
aetheris-recursive = { path = "../aetheris-recursive" }
halo2curves = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
once_cell = "1.18"
chrono = "0.4"
tokio = { workspace = true }
libc = "0.2"
anyhow = { workspace = true }
sled = { workspace = true }
bip39 = { workspace = true }
tiny-keccak = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
getrandom = { version = "0.2", features = ["js"] }
aes-gcm = { workspace = true }
bincode = { workspace = true }
rand = { workspace = true }
argon2 = "0.5"
libp2p = { workspace = true }
futures-util = "0.3"
x25519-dalek = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
