[package]
name = "aetheris-node"
version = "0.1.0"
edition = "2024"

[dependencies]
aetheris-core = { path = "../aetheris-core" }
aetheris-crypto = { path = "../aetheris-crypto" }
aetheris-zkp = { path = "../aetheris-zkp" }
aetheris-recursive = { path = "../aetheris-recursive" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
blake3 = { workspace = true }
libp2p = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
sled = { workspace = true }
bincode = { workspace = true }
x25519-dalek = { workspace = true }
tiny-keccak = { workspace = true }
aes-gcm = { workspace = true }
ed25519-dalek = { workspace = true }

[dev-dependencies]
tempfile = "3"
