[package]
name = "aetheris-recursive"
version = "0.1.0"
edition = "2021"

[dependencies]
aetheris-core = { path = "../aetheris-core" }
aetheris-crypto = { path = "../aetheris-crypto" }
aetheris-zkp = { path = "../aetheris-zkp" }
halo2_proofs = { workspace = true }
halo2curves = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
libp2p = { workspace = true, features = ["serde"] }
futures = { workspace = true }
hex = "0.4"
ff = "0.13"
group = "0.13"
rand = { workspace = true }
log = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
rayon = "1.8"
blake3 = { workspace = true }
subtle = "2.6"
ed25519-dalek = { workspace = true }
# Using a more standard poseidon implementation if available, or just mock it for now
# poseidon = "0.3" 

[dev-dependencies]
rand_chacha = { workspace = true }
