[package]
name = "aetheris-recursive"
version = "0.1.0"
edition = "2021"

[dependencies]
aetheris-core = { path = "../aetheris-core" }
aetheris-crypto = { path = "../aetheris-crypto" }
aetheris-zkp = { path = "../aetheris-zkp" }
blake2b_simd = "1"
halo2_proofs = { workspace = true }
halo2curves = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
libp2p = { workspace = true, features = ["serde"] }
futures = { workspace = true }
hex = { workspace = true }
ff = "0.13"
group = "0.13"
rand = { workspace = true }
log = "0.4"
num-bigint = { workspace = true }
num-traits = { workspace = true }
rayon = "1.8"
blake3 = { workspace = true }
subtle = { workspace = true }
ed25519-dalek = { workspace = true }
halo2_backend = { path = "../aetheris-zkp/vendor/halo2/halo2_backend" }

[dev-dependencies]
rand_chacha = { workspace = true }
halo2_middleware = { path = "../aetheris-zkp/vendor/halo2/halo2_middleware" }
