[package]
name = "aetheris-wallet"
version = "0.1.0"
edition = "2024"

[dependencies]
aetheris-core = { path = "../aetheris-core" }
aetheris-crypto = { path = "../aetheris-crypto" }
aetheris-zkp = { path = "../aetheris-zkp" }
clap = { workspace = true }
tiny-bip39 = { workspace = true }
ed25519-dalek = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true }
zeroize = { workspace = true }
rand = { workspace = true }
argon2 = "0.5"
aes-gcm = { workspace = true }
rpassword = "7.3"
blake3 = { workspace = true }
tiny-keccak = { workspace = true }
