[package]
name = "aetheris-zkp"
version = "0.1.0"
edition = "2024"

[dependencies]
halo2_proofs = { workspace = true }
halo2_backend = { git = "https://github.com/privacy-scaling-explorations/halo2.git", branch = "main" }
halo2_middleware = { git = "https://github.com/privacy-scaling-explorations/halo2.git", branch = "main" }
halo2curves = { workspace = true }
rand_chacha = { workspace = true }
rand = { workspace = true }
rand_core = "0.6"
blake3 = { workspace = true }
aetheris-core = { workspace = true }
serde = { workspace = true }
aes-gcm = { workspace = true }
x25519-dalek = { workspace = true }
hex = { workspace = true }
group = "0.13"
