[package]
name = "aetheris-zkp"
version = "0.1.0"
edition = "2024"

[dependencies]
halo2_proofs = { workspace = true }
halo2_backend = { path = "vendor/halo2/halo2_backend" }
halo2_middleware = { path = "vendor/halo2/halo2_middleware" }
halo2curves = { workspace = true }
rand_chacha = { workspace = true }
rand = { workspace = true }
rand_core = "0.6"
blake3 = { workspace = true }
aetheris-core = { workspace = true }
aetheris-crypto = { path = "../aetheris-crypto" }
serde = { workspace = true }
aes-gcm = { workspace = true }
x25519-dalek = { workspace = true }
hex = { workspace = true }
group = "0.13"
